--- a/producto7.html
+++ b/producto7.html
@@ -129,7 +129,7 @@
                 <div class="information">
                     <p class="title-footer"> Informacion</p>
                     <ul>
-                        <li><a href="#"> Acerca de nosotros</a></li>
+                        <li><a href="Nosotros.html"> Acerca de nosotros</a></li>
                         <li><a href="Politicas.html"> Politica de privacidad</a></li>
                         <li><a href="#"> Terminos y condiciones</a></li>
                     </ul>
