--- a/producto4.html
+++ b/producto4.html
@@ -155,7 +155,7 @@
                     <ul>
                         <li><a href="Nosotros.html"> Acerca de nosotros</a></li>
                         <li><a href="Politicas.html"> Politica de privacidad</a></li>
-                        <li><a href="#"> Terminos y condiciones</a></li>
+                        <li><a href="Terminos.html"> Terminos y condiciones</a></li>
                     </ul>
                 </div>
                 <div class="my-account">
