--- a/Politicas.html
+++ b/Politicas.html
@@ -141,9 +141,9 @@
                 <div class="information">
                     <p class="title-footer"> Informacion</p>
                     <ul>
-                        <li><a href="#"> Acerca de nosotros</a></li>
+                        <li><a href="Nosotros.html"> Acerca de nosotros</a></li>
                         <li><a href="Politicas.html"> Politica de privacidad</a></li>
-                        <li><a href="#"> Terminos y condiciones</a></li>
+                        <li><a href="Terminos.html"> Terminos y condiciones</a></li>
                     </ul>
                 </div>
                 <div class="my-account">
