--- a/Ordenes.html
+++ b/Ordenes.html
@@ -477,9 +477,10 @@
                         <li><a href="index.html">Inicio</a></li>
                         <li><a href="productos.html">Productos</a></li>
                         <li><a href="#">Lista de Deseos</a></li>
-                        <li><a href="#">Contacto</a></li>
+                        <li><a href="Ordenes.html">Historial de Ordenes</a></li>
                         <li><a href="Login.html">Login</a></li>
                         <li><a href="Registro.html">Registro</a></li>
+                        <li><a href="Cuenta.html">Mi Cuenta</a></li>
                     </ul>
                    
                 </nav>
