--- a/Ordenes.html
+++ b/Ordenes.html
@@ -432,6 +432,19 @@
             max-width: 50px;
             max-height: 50px;
         }
+
+        .order-details {
+            display: none;
+            padding: 10px;
+            background-color: #f9f9f9;
+            border-top: 1px solid #ddd;
+        }
+
+        .details-button {
+            cursor: pointer;
+            color: var(--primary-color);
+            text-decoration: underline;
+        }
    
         </style>
     
