--- a/LoginAdmin.html
+++ b/LoginAdmin.html
@@ -12,8 +12,9 @@
 <body>
     
     <div class="wrapper">
-        <form id="loginForm">
-            <h1>Iniciar seción como Administrador</h1>
+        <!-- Utiliza el atributo 'action' para especificar la URL a la que se enviará el formulario -->
+        <form id="loginForm" action="Admin.html">
+            <h1>Iniciar sesión como Administrador</h1>
             <div class="input-box">
                 <input type="text" id="username" placeholder="Nombre de Administrador" required>
                 <i class='bx bxs-user'></i>
@@ -27,18 +28,12 @@
                 <label><input type="checkbox"> Recordar</label>
             </div>
 
-
             <div class="login">
-                <button type="button" class="btn" onclick="iniciarSesion()">Iniciar sesión</button>
-            </div>
-
-            <div class="register-link">
-                <p>¿No tienes cuenta? <a href="RegistroAdmin.html">Regístrate</a></p>
+                <button type="submit" class="btn">Iniciar sesión</button>
             </div>
         </form>
     </div>
 
-    <script src="script.js"></script>
 </body>
 
 </html>
