--- a/index.html
+++ b/index.html
@@ -140,9 +140,15 @@
                             <span>
                                 <i class="fa-regular fa-eye"></i>
                             </span>
-                            <span>
-                                <i class="fa-regular fa-heart"></i>   
-                            </span>
+                            <input type="checkbox" id="likeChechbox" class="like-checkbox">
+                            <label for="likeChechbox">
+                                <i class="fas fa-heart"></i> 
+                            </label>
+                            <div class="popup-container">
+                                <div class="popup">
+                                    Agregado a la lista de deseos
+                                </div>
+                            </div>
                             <span>
                                 <i class="fa-solid fa-code-compare"></i>
                             </span>
@@ -172,9 +178,15 @@
                         <span>
                             <i class="fa-regular fa-eye"></i>
                         </span>
-                        <span>
-                            <i class="fa-regular fa-heart"></i>   
-                        </span>
+                        <input type="checkbox" id="likeChechbox2" class="like-checkbox">
+                            <label for="likeChechbox2">
+                                <i class="fas fa-heart"></i> 
+                            </label>
+                            <div class="popup-container">
+                                <div class="popup">
+                                    Agregado a la lista de deseos
+                                </div>
+                            </div>
                         <span>
                             <i class="fa-solid fa-code-compare"></i>
                         </span>
@@ -204,9 +216,15 @@
                         <span>
                             <i class="fa-regular fa-eye"></i>
                         </span>
-                        <span>
-                            <i class="fa-regular fa-heart"></i>   
-                        </span>
+                        <input type="checkbox" id="likeChechbox3" class="like-checkbox">
+                            <label for="likeChechbox3">
+                                <i class="fas fa-heart"></i> 
+                            </label>
+                            <div class="popup-container">
+                                <div class="popup">
+                                    Agregado a la lista de deseos
+                                </div>
+                            </div>
                         <span>
                             <i class="fa-solid fa-code-compare"></i>
                         </span>
@@ -237,9 +255,15 @@
                         <span>
                             <i class="fa-regular fa-eye"></i>
                         </span>
-                        <span>
-                            <i class="fa-regular fa-heart"></i>   
-                        </span>
+                        <input type="checkbox" id="likeChechbox4" class="like-checkbox">
+                            <label for="likeChechbox4">
+                                <i class="fas fa-heart"></i> 
+                            </label>
+                            <div class="popup-container">
+                                <div class="popup">
+                                    Agregado a la lista de deseos
+                                </div>
+                            </div>
                         <span>
                             <i class="fa-solid fa-code-compare"></i>
                         </span>
@@ -269,9 +293,15 @@
                         <span>
                             <i class="fa-regular fa-eye"></i>
                         </span>
-                        <span>
-                            <i class="fa-regular fa-heart"></i>   
-                        </span>
+                        <input type="checkbox" id="likeChechbox5" class="like-checkbox">
+                            <label for="likeChechbox5">
+                                <i class="fas fa-heart"></i> 
+                            </label>
+                            <div class="popup-container">
+                                <div class="popup">
+                                    Agregado a la lista de deseos
+                                </div>
+                            </div>
                         <span>
                             <i class="fa-solid fa-code-compare"></i>
                         </span>
@@ -302,9 +332,15 @@
                         <span>
                             <i class="fa-regular fa-eye"></i>
                         </span>
-                        <span>
-                            <i class="fa-regular fa-heart"></i>   
-                        </span>
+                        <input type="checkbox" id="likeChechbox6" class="like-checkbox">
+                            <label for="likeChechbox6">
+                                <i class="fas fa-heart"></i> 
+                            </label>
+                            <div class="popup-container">
+                                <div class="popup">
+                                    Agregado a la lista de deseos
+                                </div>
+                            </div>
                         <span>
                             <i class="fa-solid fa-code-compare"></i>
                         </span>
@@ -334,9 +370,15 @@
                         <span>
                             <i class="fa-regular fa-eye"></i>
                         </span>
-                        <span>
-                            <i class="fa-regular fa-heart"></i>   
-                        </span>
+                        <input type="checkbox" id="likeChechbox7" class="like-checkbox">
+                            <label for="likeChechbox7">
+                                <i class="fas fa-heart"></i> 
+                            </label>
+                            <div class="popup-container">
+                                <div class="popup">
+                                    Agregado a la lista de deseos
+                                </div>
+                            </div>
                         <span>
                             <i class="fa-solid fa-code-compare"></i>
                         </span>
@@ -366,9 +408,15 @@
                         <span>
                             <i class="fa-regular fa-eye"></i>
                         </span>
-                        <span>
-                            <i class="fa-regular fa-heart"></i>   
-                        </span>
+                        <input type="checkbox" id="likeChechbox8" class="like-checkbox">
+                            <label for="likeChechbox8">
+                                <i class="fas fa-heart"></i> 
+                            </label>
+                            <div class="popup-container">
+                                <div class="popup">
+                                    Agregado a la lista de deseos
+                                </div>
+                            </div>
                         <span>
                             <i class="fa-solid fa-code-compare"></i>
                         </span>
@@ -399,9 +447,15 @@
                         <span>
                             <i class="fa-regular fa-eye"></i>
                         </span>
-                        <span>
-                            <i class="fa-regular fa-heart"></i>   
-                        </span>
+                        <input type="checkbox" id="likeChechbox9" class="like-checkbox">
+                            <label for="likeChechbox9">
+                                <i class="fas fa-heart"></i> 
+                            </label>
+                            <div class="popup-container">
+                                <div class="popup">
+                                    Agregado a la lista de deseos
+                                </div>
+                            </div>
                         <span>
                             <i class="fa-solid fa-code-compare"></i>
                         </span>
@@ -431,9 +485,15 @@
                         <span>
                             <i class="fa-regular fa-eye"></i>
                         </span>
-                        <span>
-                            <i class="fa-regular fa-heart"></i>   
-                        </span>
+                        <input type="checkbox" id="likeChechbox10" class="like-checkbox">
+                            <label for="likeChechbox10">
+                                <i class="fas fa-heart"></i> 
+                            </label>
+                            <div class="popup-container">
+                                <div class="popup">
+                                    Agregado a la lista de deseos
+                                </div>
+                            </div>
                         <span>
                             <i class="fa-solid fa-code-compare"></i>
                         </span>
@@ -488,7 +548,7 @@
                     <ul>
                         <li><a href="Cuenta.html">Mi cuenta</a></li>
                         <li><a href="Ordenes.html">Historial de ordenes</a></li>
-                        <li><a href="#">Lista de deseos</a></li>
+                        <li><a href="Deseos.html">Lista de deseos</a></li>
                     </ul>
                 </div>
                 <div class="newsletter">
