Links Lista de Deseos

--- a/Ordenes.html
+++ b/Ordenes.html
@@ -489,7 +489,7 @@
                     <ul class="menu">
                         <li><a href="index.html">Inicio</a></li>
                         <li><a href="productos.html">Productos</a></li>
-                        <li><a href="#">Lista de Deseos</a></li>
+                        <li><a href="Deseos.html">Lista de Deseos</a></li>
                         <li><a href="Ordenes.html">Historial de Ordenes</a></li>
                         <li><a href="Login.html">Login</a></li>
                         <li><a href="Registro.html">Registro</a></li>
@@ -584,8 +584,8 @@
                     <p class="title-footer"> Mi cuenta</p>
                     <ul>
                         <li><a href="Cuenta.html">Mi cuenta</a></li>
-                        <li><a href="#">Historial de ordenes</a></li>
-                        <li><a href="#">Lista de deseos</a></li>
+                        <li><a href="Ordenes.html">Historial de ordenes</a></li>
+                        <li><a href="Deseos.html">Lista de deseos</a></li>
                     </ul>
                 </div>
                 <div class="newsletter">
