--- a/productos.html
+++ b/productos.html
@@ -64,7 +64,7 @@
                 <ul class="menu">
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="productos.html">Productos</a></li>
-                    <li><a href="#">Lista de Deseos</a></li>
+                    <li><a href="Deseos.html">Lista de Deseos</a></li>
                     <li><a href="Ordenes.html">Historial de Ordenes</a></li>
                     <li><a href="Login.html">Login</a></li>
                     <li><a href="Registro.html">Registro</a></li>
@@ -160,7 +160,7 @@
                     <ul>
                         <li><a href="Nosotros.html"> Acerca de nosotros</a></li>
                         <li><a href="Politicas.html"> Politica de privacidad</a></li>
-                        <li><a href="#"> Terminos y condiciones</a></li>
+                        <li><a href="Terminos.html"> Terminos y condiciones</a></li>
                     </ul>
                 </div>
                 <div class="my-account">
@@ -168,7 +168,7 @@
                     <ul>
                         <li><a href="Cuenta.html">Mi cuenta</a></li>
                         <li><a href="Ordenes.html">Historial de ordenes</a></li>
-                        <li><a href="Terminos.html">Lista de deseos</a></li>
+                        <li><a href="Deseos.html">Lista de deseos</a></li>
                     </ul>
                 </div>
                 <div class="newsletter">
