--- a/Deseos.html
+++ b/Deseos.html
@@ -40,7 +40,7 @@
                 <ul class="menu">
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="productos.html">Productos</a></li>
-                    <li><a href="#">Lista de Deseos</a></li>
+                    <li><a href="Deseos.html">Lista de Deseos</a></li>
                     <li><a href="Ordenes.html">Historial de Ordenes</a></li>
                     <li><a href="Login.html">Login</a></li>
                     <li><a href="Registro.html">Registro</a></li>
