--- a/producto4.html
+++ b/producto4.html
@@ -49,7 +49,7 @@
                 <ul class="menu">
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="productos.html">Productos</a></li>
-                    <li><a href="#">Lista de Deseos</a></li>
+                    <li><a href="Deseos.html">Lista de Deseos</a></li>
                     <li><a href="Ordenes.html">Historial de Ordenes</a></li>
                     <li><a href="Login.html">Login</a></li>
                     <li><a href="Registro.html">Registro</a></li>
@@ -163,7 +163,7 @@
                     <ul>
                         <li><a href="Cuenta.html">Mi cuenta</a></li>
                         <li><a href="Ordenes.html">Historial de ordenes</a></li>
-                        <li><a href="#">Lista de deseos</a></li>
+                        <li><a href="Deseos.html">Lista de deseos</a></li>
                     </ul>
                 </div>
                 <div class="newsletter">
