--- a/Cuenta.html
+++ b/Cuenta.html
@@ -521,7 +521,7 @@
 
     <div class="navigation-buttons">
         <a href="Ordenes.html" class="navigation-button">Mis órdenes de Compra</a>
-        <a href="#" class="navigation-button">Mi lista de Deseos</a>
+        <a href="Deseos.html" class="navigation-button">Mi lista de Deseos</a>
         <a href="Login.html" class="navigation-button">Salir</a>
     </div>
 
