Funcion a carrito de compras

--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
                                 <i class="fa-regular fa-star"></i>
                             </div>
                             <h3>C4 Extreme</h3>
-                            <span class="add-cart">
+                            <button class="add-cart">
                                 <i class="fa-solid fa-basket-shopping"></i>
-                            </span>
+                            </button>
                             <p class="price">$350 <span>$420</span></p>
                         </div>
                     </div>
@@ -247,9 +247,9 @@
                             <i class="fa-solid fa-star"></i>
                         </div>
                         <h3>Nitro Tech 100</h3>
-                        <span class="add-cart">
+                        <button class="add-cart">
                             <i class="fa-solid fa-basket-shopping"></i>
-                        </span>
+                        </button>
                         <p class="price">$998</p>
                     </div> 
                 </div>
@@ -285,9 +285,9 @@
                             <i class="fa-solid fa-star"></i>
                         </div>
                         <h3>Sujetador Deportivo Fraction</h3>
-                        <span class="add-cart">
+                        <button class="add-cart">
                             <i class="fa-solid fa-basket-shopping"></i>
-                        </span>
+                        </button>
                         <p class="price">$500</p>
                     </div> 
                 </div>
@@ -324,9 +324,9 @@
                             <i class="fa-regular fa-star"></i>
                         </div>
                         <h3>Set de 5 bandas Elasticas</h3>
-                        <span class="add-cart">
+                        <button class="add-cart">
                             <i class="fa-solid fa-basket-shopping"></i>
-                        </span>
+                        </button>
                         <p class="price">$310 <span>$346</span></p>
                     </div>
                 </div>
@@ -348,9 +348,9 @@
                                     Agregado a la lista de deseos
                                 </div>
                             </div>
-                        <span>
-                            <i class="fa-solid fa-code-compare"></i>
-                        </span>
+                            <button class="add-cart">
+                                <i class="fa-solid fa-basket-shopping"></i>
+                            </button>
                        </div>
                     </div>
                     <div class="content-card-product">
@@ -362,9 +362,9 @@
                             <i class="fa-solid fa-star"></i>
                         </div>
                         <h3>Cinturon Neopreno</h3>
-                        <span class="add-cart">
+                        <button class="add-cart">
                             <i class="fa-solid fa-basket-shopping"></i>
-                        </span>
+                        </button>
                         <p class="price">$250</p>
                     </div> 
                 </div>
@@ -387,9 +387,9 @@
                                     Agregado a la lista de deseos
                                 </div>
                             </div>
-                        <span>
-                            <i class="fa-solid fa-code-compare"></i>
-                        </span>
+                            <button class="add-cart">
+                                <i class="fa-solid fa-basket-shopping"></i>
+                            </button>
                        </div>
                     </div>
                     <div class="content-card-product">
@@ -439,9 +439,9 @@
                             <i class="fa-solid fa-star"></i>
                         </div>
                         <h3>Nitraflex Black Green Apple</h3>
-                        <span class="add-cart">
+                        <button class="add-cart">
                             <i class="fa-solid fa-basket-shopping"></i>
-                        </span>
+                        </button>
                         <p class="price">$509</p>
                     </div> 
                 </div>
@@ -477,9 +477,9 @@
                             <i class="fa-solid fa-star"></i>
                         </div>
                         <h3>Psychotic Black</h3>
-                        <span class="add-cart">
+                        <button class="add-cart">
                             <i class="fa-solid fa-basket-shopping"></i>
-                        </span>
+                        </button>
                         <p class="price">$303</p>
                     </div> 
                 </div>
@@ -516,9 +516,9 @@
                             <i class="fa-regular fa-star"></i>
                         </div>
                         <h3>Wake The Dead Smelling Salts</h3>
-                        <span class="add-cart">
+                        <button class="add-cart">
                             <i class="fa-solid fa-basket-shopping"></i>
-                        </span>
+                        </button>
                         <p class="price">$162 <span>$180</span></p>
                     </div>
                 </div>
@@ -554,9 +554,9 @@
                             <i class="fa-solid fa-star"></i>
                         </div>
                         <h3>Creatina Sabor Frambuesa</h3>
-                        <span class="add-cart">
+                        <button class="add-cart">
                             <i class="fa-solid fa-basket-shopping"></i>
-                        </span>
+                        </button>
                         <p class="price">$890</p>
                     </div> 
                 </div>
@@ -623,7 +623,7 @@
     </script> 
 
     <script src="script.js" ></script>
-   
+    <script src="index.js" ></script>
     
 </body>
 </html>
